--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -543,6 +543,12 @@ fieldset[disabled] .btn-success.active {
     text-align: center;
 }
 
+@media (max-width: 768px) {
+    .portfolio-modal .modal-content {
+        padding: 30px 0;
+    }
+}
+
 .portfolio-modal .modal-content h2 {
     margin: 0;
     font-size: 3em;
@@ -597,6 +603,22 @@ fieldset[disabled] .btn-success.active {
     z-index: 1052;
 }
 
+@media (max-width: 768px) {
+    .portfolio-modal .close-modal {
+        width: 50px;
+        height: 50px;
+        top: 0px;
+        right: 0px;
+    }
+    .portfolio-modal .close-modal .lr {
+        height: 50px;
+        margin-left: 20px;
+    }
+    .portfolio-modal .close-modal .lr .rl {
+        height: 50px;
+    }
+}
+
 .portfolio-modal .modal-backdrop {
     opacity: 0;
     display: none;
@@ -624,6 +646,19 @@ fieldset[disabled] .btn-success.active {
 .portfolio-modal .modal-content .modal-list h4 span {
     font-size: 60%;
     color: grey;
+}
+
+@media (max-width: 768px) {
+    .portfolio-modal .modal-content ul.modal-list {
+      width: 100%;
+    }
+    .portfolio-modal .modal-content h3 {
+      padding-left: 0;
+    }
+    .portfolio-modal .modal-body{
+      padding-left: 0;
+      padding-right: 0;
+    }
 }
 
 #skipnav a {
