Re-Styling h1 "Thomas Caillier"

--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -95,9 +95,9 @@ div.portfolio-item {
 }
 
 @media (max-width: 1100px) {
-  .portfolio-link h1 {
-    font-size: 25px;
-  }
+    .portfolio-link h1 {
+        font-size: 25px;
+    }
 }
 
 #about h2,
@@ -157,8 +157,12 @@ header .intro-text .skills {
     border: none;
 }
 
-.navbar-custom .navbar-brand {
+.navbar-custom a.navbar-brand{
     color: white;
+}
+
+.navbar-custom a.navbar-brand h1{
+    font-size: 2em;
 }
 
 .navbar-custom .navbar-brand:hover,
@@ -656,14 +660,14 @@ fieldset[disabled] .btn-success.active {
 
 @media (max-width: 768px) {
     .portfolio-modal .modal-content ul.modal-list {
-      width: 100%;
+        width: 100%;
     }
     .portfolio-modal .modal-content h3 {
-      padding-left: 0;
+        padding-left: 0;
     }
-    .portfolio-modal .modal-body{
-      padding-left: 0;
-      padding-right: 0;
+    .portfolio-modal .modal-body {
+        padding-left: 0;
+        padding-right: 0;
     }
 }
 
