--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -615,14 +615,15 @@ fieldset[disabled] .btn-success.active {
 
 @media (max-width: 768px) {
     .portfolio-modal .close-modal {
-        width: 50px;
-        height: 50px;
+        z-index: 1056;
+        width: 65px;
+        height: 65px;
         top: 0px;
         right: 0px;
     }
     .portfolio-modal .close-modal .lr {
         height: 50px;
-        margin-left: 20px;
+        margin-left: 35px;
     }
     .portfolio-modal .close-modal .lr .rl {
         height: 50px;
